@@ -30,6 +30,20 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|CannedTokenStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|MockAnalyzer
 import|;
 end_import
@@ -288,6 +302,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -462,6 +486,107 @@ name|FIELD_NAME
 argument_list|,
 name|s1
 argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testHighlightKnownQuery
+specifier|public
+name|void
+name|testHighlightKnownQuery
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|WeightedSpanTermExtractor
+name|extractor
+init|=
+operator|new
+name|WeightedSpanTermExtractor
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|void
+name|extractUnknownQuery
+parameter_list|(
+name|Query
+name|query
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|WeightedSpanTerm
+argument_list|>
+name|terms
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|terms
+operator|.
+name|put
+argument_list|(
+literal|"foo"
+argument_list|,
+operator|new
+name|WeightedSpanTerm
+argument_list|(
+literal|3
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+decl_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|WeightedSpanTerm
+argument_list|>
+name|terms
+init|=
+name|extractor
+operator|.
+name|getWeightedSpanTerms
+argument_list|(
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"bar"
+argument_list|,
+literal|"quux"
+argument_list|)
+argument_list|)
+argument_list|,
+literal|3
+argument_list|,
+operator|new
+name|CannedTokenStream
+argument_list|()
+argument_list|)
+decl_stmt|;
+comment|// no foo
+name|assertEquals
+argument_list|(
+name|Collections
+operator|.
+name|singleton
+argument_list|(
+literal|"quux"
+argument_list|)
+argument_list|,
+name|terms
+operator|.
+name|keySet
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
